2005-01-07  Per Bothner  <per@bothner.com>

	* PreProcess.java: New class, used by the select-javaN rules in
	top-level Makefile to convert Java source files.

2003-04-05  Per Bothner  <per@bothner.com>

	* AbstractFormat.java (writeObject):  Add overloaded methods.

2001-07-17  Per Bothner  <per@bothner.com>

	* AbstractFormat.java:  New class, implements FormatToConsumer.
	* Makefile.am:  Update accordingly.

2001-06-03  Per Bothner  <per@bothner.com>

	* RangeTable.java (remove):  New methods.

2001-04-22  Per Bothner  <per@bothner.com>

	* RangeTable.java:  New class.
	* Makefile.am:  Update accordingly.

2001-03-29  Per Bothner  <per@bothner.com>

	* Position.java:  Removed - subsumed by gnu.lists.SeqPosition.

2001-03-08  Per Bothner  <per@bothner.com>

	* AbstractString.java:  Replaced by gnu.lists.CharSequence.
	* CharBuffer.java:  Moved to gnu.lists.
	* ConstantString.java:  Removed for now.
	* Consumable.java:  Moved to gnu.lists.
	* Consumer.java:  Moved to gnu.lists.
	* F32Vector.java:  Moved to gnu.lists.
	* F64Vector.java:  Moved to gnu.lists.
	* FString.java:  Moved to gnu.lists.
	* FVector.java:  Moved to gnu.lists.
	* LList.java:  Moved to gnu.lists.
	* Pair.java:  Moved to gnu.lists.
	* PairWithPosition.java:  Moved to gnu.lists.
	* S16Vector.java:  Moved to gnu.lists.
	* S32Vector.java:  Moved to gnu.lists.
	* S64Vector.java:  Moved to gnu.lists.
	* S8Vector.java:  Moved to gnu.lists.
	* Sequence.java:  Moved to gnu.lists and made to an interface, with
	method implementation moved to AbstractSequence.
	* SubString.java:  Removed, for now.
	* TreeList.java:  Moved to gnu.lists.
	* U16Vector.java:  Moved to gnu.lists.
	* U32Vector.java:  Moved to gnu.lists.
	* U64Vector.java:  Moved to gnu.lists.
	* U8Vector.java:  Moved to gnu.lists.
	* UniformVector.java:  Replaced by gnu.lists.SimpleVector.
	* Makefile.am:  Update accordingly.
	* ConsumeProc.java:  Now need to import gnu.lists.

2001-02-16  Per Bothner  <per@bothner.com>
