@@ -1,3 +1,7 @@
+2005-01-08  Per Bothner  <per@bothner.com>
+
+	* PreProcess.java (main): Also handle [-,--]keyword=[true|false].
+
 2005-01-07  Per Bothner  <per@bothner.com>
 
 	* PreProcess.java: New class, used by the select-javaN rules in
